valid_tests/functions/test1.go
// Test 1: Basic function declaration and call
func add(a int, b int) int {
    return a + b
}

func main() {
    result := add(5, 3)
}
