invalid_tests/functions/test3.go
// Test 3: Missing parameter parentheses
func add a int, b int int {
    return a + b
}

func main() {
    result := add(1, 2)
}
